@@ -6,6 +6,7 @@ suggesting improvements, submitting patches or proofreading the code.
 
 Arthur van Hoff
 Berk D. Demir
+Guo Sijie
 Jonathan Payne
 Michael Stack
 Shrijeet Paliwal
